<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="6dp"
    android:paddingRight="6dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/top_teams_bar"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/east_conference_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:shapeAppearanceOverlay="@style/PillShapeAppearance"
            android:textAllCaps="false"
            android:fontFamily="@font/asap_bold"
            android:textSize="14sp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:text="@string/east_team_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/west_conference_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/asap_regular"
            android:textSize="14sp"
            app:shapeAppearanceOverlay="@style/PillShapeAppearance"
            android:textAllCaps="false"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:text="@string/west_team_button" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_gravity="center_horizontal|center_vertical"
            android:id="@+id/teams_recycler_view"
            android:layout_marginStart="0dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:visibility="visible"
            tools:listitem="@layout/teams_icon_item" />


        <include
            layout="@layout/loading_error_states"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </FrameLayout>


</LinearLayout>