<resources>
    <string name="app_name">Basketball Bonanza</string>
    <string name="international">International</string>
    <string name="error_with_api_call">Oops something went wrong!</string>
    <string name="logo">Logo</string>
    <string name="east_team_button">East</string>
    <string name="west_team_button">West</string>
    <string name="box_score_button_text">Box Score</string>
    <string name="away_team_text">AWAY</string>
    <string name="home_team_text">HOME</string>
    <string name="team_1_logo_cd">Team 1 Logo</string>
    <string name="tickets_button_text">Tickets</string>
    <string name="filter_button_all">Countries: All</string>
...
