...
        <item
            android:id="@+id/landingPage"
            android:icon="@drawable/ic_home"
            android:iconTint="@drawable/menu_selector"
            android:title="@string/home_menu" />
        <item
            android:id="@+id/teams"
            android:icon="@drawable/ic_team"
            android:iconTint="@drawable/menu_selector"
            android:title="@string/teams_menu" />
        <item
            android:id="@+id/schedule"
            android:icon="@drawable/ic_calendar"
...
